--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "homepage": "https://mati69lbt.github.io/Control-Presupuesto/",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build --outDir docs",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
